Deploy/BitBucketSync/OpenShift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: BitBucketSync
  name: bitbucket-sync
spec:
  host: bitbucket-sync-hsg-data-labs-dev.apps.openshifttest.ama-assn.org
  port:
    targetPort: 8080
    containerPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: bitbucket-sync
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
